--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/react-scroll": "^1.8.10",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "gh-pages": "^6.3.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.0",
     "react-markdown": "^10.1.0",
+    "react-scroll": "^1.9.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
