--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.6.0",
     "gh-pages": "^6.3.0",
     "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "react": "^19.1.0",
@@ -46,6 +47,7 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwind-scrollbar": "^4.0.2",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
