--- a/.pages.yml
+++ b/.pages.yml
@@ -65,14 +65,16 @@ content:
               - { name: title, label: Title, type: string, required: true }
               - { name: name, label: Name, type: string, required: true }
               - { name: link, label: Link, type: string, required: true }
-              - name: icon
-                label: Icon
-                type: image
-                required: true
-                options:
-                  media: vectors
-                  categories: [image]
-                  extensions: [svg]
+              - { name: icon, label: Icon SVG, type: string, required: true }
+              # - name: icon
+              #   label: Icon
+              #   type: image
+              #   required: true
+              #   options:
+              #     media: vectors
+              #     categories: [image]
+              #     extensions: [svg]
+              
 
       # Skills Section
       - name: skills
